// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a section 1`] = `
<div
  className="weekday-indicator"
  data-tip="Meets on Tuesday, Friday"
>
  <div
    className="weekday-box"
    key="0"
  />
  <div
    className="weekday-box weekday-box-checked"
    key="1"
  />
  <div
    className="weekday-box"
    key="2"
  />
  <div
    className="weekday-box"
    key="3"
  />
  <div
    className="weekday-box weekday-box-checked"
    key="4"
  />
</div>
`;

exports[`should render another section 1`] = `
<div
  className="weekday-indicator"
  data-tip="No Meetings found"
>
  <div
    className="weekday-box"
    key="0"
  />
  <div
    className="weekday-box"
    key="1"
  />
  <div
    className="weekday-box"
    key="2"
  />
  <div
    className="weekday-box"
    key="3"
  />
  <div
    className="weekday-box"
    key="4"
  />
</div>
`;
